--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -33,6 +33,7 @@ wd_cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":io",
+        "//src/workerd/util:checked-queue",
         "//src/workerd/util:completion-membrane",
     ],
 )
@@ -116,6 +117,7 @@ wd_cc_library(
         "//src/workerd/jsg",
         "//src/workerd/jsg:inspector",
         "//src/workerd/jsg:script",
+        "//src/workerd/util:checked-queue",
         "//src/workerd/util:completion-membrane",
         "//src/workerd/util:exception",
         "//src/workerd/util:sqlite",
