Move Worker::Api agnostic module registry init code out
Allows sharing between Worker::Api impl's (worker and
internal production) to reduce duplication.

Signed-off-by: James M Snell <jsnell@cloudflare.com>

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -133,6 +133,21 @@ wd_cc_library(
     ],
 )
 
+wd_cc_library(
+    name = "worker-modules",
+    hdrs = ["worker-modules.h"],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":io",
+        "//src/pyodide:pyodide_static",
+        "//src/pyodide:python-entrypoint",
+        "//src/workerd/api:pyodide",
+        "//src/workerd/api:rtti",
+        "//src/workerd/api/node",
+        "//src/workerd/jsg",
+    ],
+)
+
 # TODO(cleanup): Split this up further.
 wd_cc_library(
     name = "actor",
