add perf_hooks module and global Performance classes

--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -119,3 +119,9 @@ wpt_test(
     config = "fs-test.ts",
     wpt_directory = "@wpt//:fs@module",
 )
+
+wpt_test(
+    name = "performance-timeline",
+    config = "performance-timeline-test.ts",
+    wpt_directory = "@wpt//:performance-timeline@module",
+)
