[bazel] Use compact repo mapping manifest
This is newly available in Bazel 8.4.0+ and the latest rules_cc.

--- a/.bazelrc
+++ b/.bazelrc
@@ -36,6 +36,10 @@ import %workspace%/build/rust_lint.bazelrc
 # Prevents bazel cache invalidation when switching terminals
 build --incompatible_strict_action_env
 
+# Use compat repo mapping to avoid O(n^2) repo mapping size, speeding up bazel repo mapping phase
+# and conserving space
+build --incompatible_compact_repo_mapping_manifest
+
 # Our dependencies (ICU, zlib, etc.) produce a lot of these warnings, so we disable them.
 build --per_file_copt='external@-Wno-error'
 build --per_file_copt='external@-Wno-suggest-override'
