Set event info before possibly calling actor constructor.

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -264,6 +264,7 @@ wd_cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":frankenvalue_capnp",
+        ":trace",
         ":worker-interface_capnp",
         "//src/workerd/util",
         "@capnp-cpp//src/capnp:capnp-rpc",
