--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -16,6 +16,12 @@ wd_test(
 )
 
 wd_test(
+    src = "cluster-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["cluster-nodejs-test.js"],
+)
+
+wd_test(
     src = "console-nodejs-test.wd-test",
     args = ["--experimental"],
     data = ["console-nodejs-test.js"],
