add node:child_process module
Signed-off-by: James M Snell <jsnell@cloudflare.com>

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -22,6 +22,12 @@ wd_test(
 )
 
 wd_test(
+    src = "child_process-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["child_process-nodejs-test.js"],
+)
+
+wd_test(
     src = "console-nodejs-test.wd-test",
     args = ["--experimental"],
     data = ["console-nodejs-test.js"],
