Reapply "add perf_hooks module and global Performance classes"
This reverts commit ee37b984b3c1b53fe6c1beadeb2dfb22bbb29680.

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -161,6 +161,12 @@ wd_test(
 )
 
 wd_test(
+    src = "perf-hooks-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["perf-hooks-nodejs-test.js"],
+)
+
+wd_test(
     src = "path-test.wd-test",
     args = ["--experimental"],
     data = ["path-test.js"],
