--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -637,3 +637,9 @@ wd_test(
     args = ["--experimental"],
     data = ["worker_threads-nodejs-test.js"],
 )
+
+wd_test(
+    src = "wasi-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["wasi-nodejs-test.js"],
+)
