--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -649,3 +649,9 @@ wd_test(
     args = ["--experimental"],
     data = ["wasi-nodejs-test.js"],
 )
+
+wd_test(
+    src = "dgram-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["dgram-nodejs-test.js"],
+)
