--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -297,6 +297,18 @@ wd_test(
     data = ["querystring-nodejs-test.js"],
 )
 
+wd_test(
+    src = "readline-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["readline-nodejs-test.js"],
+)
+
+wd_test(
+    src = "repl-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["repl-nodejs-test.js"],
+)
+
 config_setting(
     name = "debug_build",
     values = {"compilation_mode": "dbg"},
