Add a debug module for workerd testing
Scratching an itch to make it easier to provide
debugging utilities in workerd for testing.
This echoes the debug binding in the internal
repo but is made available via an import so
that top-level scope can use it easily.

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -874,3 +874,11 @@ wd_test(
         "tests/rpc-error-test.rpc.js",
     ],
 )
+
+wd_test(
+    src = "tests/debug-test.wd-test",
+    args = ["--experimental"],
+    data = [
+        "tests/debug-test.js",
+    ],
+)
