--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,6 @@
+"Bazel dependencies, see https://registry.bazel.build"
+bazel_dep(name = "abseil-cpp", version = "20250814.0") # abseil is used by protobuf and tcmalloc.
+bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
 bazel_dep(name = "bazel_features", version = "1.35.0")
 bazel_dep(name = "bazel_skylib", version = "1.8.1")
 bazel_dep(name = "rules_shell", version = "0.6.0")
@@ -41,3 +44,4 @@ git_override(
 bazel_dep(name = "boringssl", version = "0.20250818.0", repo_name = "ssl")
 
 include("//build/deps:deps.MODULE.bazel")
+include("//build/deps:nodejs.MODULE.bazel")
