--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,6 @@
 bazel_dep(name = "bazel_features", version = "1.35.0")
 bazel_dep(name = "bazel_skylib", version = "1.8.1")
+bazel_dep(name = "bazelrc-preset.bzl", version = "1.3.0")
 
 # needed by perfetto, but not actually used.
 bazel_dep(name = "rules_android", version = "0.6.4")
