use MODULE.bazel file for all deps that are on BCR, then override

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,7 +10,7 @@ bazel_dep(name = "rules_android", version = "0.6.4")
 bazel_dep(name = "protobuf", version = "32.0", repo_name = "com_google_protobuf")
 
 # abseil is used by protobuf and tcmalloc.
-bazel_dep(name = "abseil-cpp", version = "20250814.0", repo_name = "com_google_absl")
+bazel_dep(name = "abseil-cpp", version = "20250814.0")
 
 # Not pulling in platforms via bzlmod causes issues with the Windows clang-cl toolchain
 bazel_dep(name = "platforms", version = "1.0.0")
