--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -102,6 +102,11 @@ wd_test(
     data = ["module-imports-test.js"],
 )
 
+wd_test(
+    src = "performance-test.wd-test",
+    data = ["performance-test.js"],
+)
+
 filegroup(
     name = "all_benchmarks",
     srcs = [
