--- a/.bazelrc
+++ b/.bazelrc
@@ -55,15 +55,15 @@ build --copt=-Wno-nontrivial-memaccess
 # Increasing the optimization level of V8 significantly speeds up Python tests in GitHub Actions.
 # This is an optional performance hack intended for CI, although it might also be useful for local
 # development.
-build:v8-codegen-opt --per_file_copt=v8/src@-O2
+build:v8-codegen-opt --per_file_copt=v8/src@-O3
 # V8 is heavily using absl for hashing now, optimize it too.
-build:v8-codegen-opt --per_file_copt=external/abseil-cpp@-O2
+build:v8-codegen-opt --per_file_copt=external/abseil-cpp@-O3
 # zlib and tcmalloc (for Linux) are also CPU-intensive, optimize them too.
-build:v8-codegen-opt --per_file_copt=external/tcmalloc@-O2
-build:v8-codegen-opt --per_file_copt=external/zlib@-O2
-build:v8-codegen-opt-windows --per_file_copt=v8/src@/O2
-build:v8-codegen-opt-windows --per_file_copt=external/abseil-cpp@/O2
-build:v8-codegen-opt-windows --per_file_copt=external/zlib@/O2
+build:v8-codegen-opt --per_file_copt=external/tcmalloc@-O3
+build:v8-codegen-opt --per_file_copt=external/zlib@-O3
+build:v8-codegen-opt-windows --per_file_copt=v8/src@/O2,/clang:-O3,/DNDEBUG
+build:v8-codegen-opt-windows --per_file_copt=external/abseil-cpp@/O2,/clang:-O3,/DNDEBUG
+build:v8-codegen-opt-windows --per_file_copt=external/zlib@/O2,/clang:-O3,/DNDEBUG
 
 # In Google projects, exceptions are not used as a rule. Disabling them is more consistent with the
 # canonical V8 build and improves code size.
