Move python module metadata state creation to worker-modules.c++.
Allows reuse of the same state creation code in both
workerd-api.c++ and the internal repo equivalent.

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -135,6 +135,7 @@ wd_cc_library(
 
 wd_cc_library(
     name = "worker-modules",
+    srcs = ["worker-modules.c++"],
     hdrs = ["worker-modules.h"],
     visibility = ["//visibility:public"],
     deps = [
