--- a/src/workerd/server/BUILD.bazel
+++ b/src/workerd/server/BUILD.bazel
@@ -37,7 +37,7 @@ wd_cc_library(
     name = "malloc",
     visibility = ["//visibility:public"],
     deps = select({
-        ":really_use_tcmalloc": ["@tcmalloc//tcmalloc"],
+        ":really_use_tcmalloc": ["@com_google_tcmalloc//tcmalloc"],
         "//conditions:default": ["@bazel_tools//tools/cpp:malloc"],
     }),
 )
