Support source phase imports (#5075)

--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -99,7 +99,10 @@ wd_test(
 wd_test(
     src = "module-imports-test.wd-test",
     args = ["--experimental"],
-    data = ["module-imports-test.js"],
+    data = [
+        "module-imports-test.js",
+        "test.wasm",
+    ],
 )
 
 wd_test(
