chore: move python to bzlmod

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -44,3 +44,4 @@ bazel_dep(name = "boringssl", version = "0.20250818.0", repo_name = "ssl")
 
 include("//build/deps:deps.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
+include("//build/deps:python.MODULE.bazel")
