--- a/deps/rust/crates/BUILD.async-trait-0.1.89.bazel
+++ b/deps/rust/crates/BUILD.async-trait-0.1.89.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 package(default_visibility = ["//visibility:public"])
 
 rust_proc_macro(
-    name = "wasm_bindgen_macro",
+    name = "async_trait",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,14 +35,15 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro",
+        "crate-name=async-trait",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.101",
+    version = "0.1.89",
     deps = [
+        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__wasm-bindgen-macro-support-0.2.101//:wasm_bindgen_macro_support",
+        "@crates_vendor__syn-2.0.106//:syn",
     ],
 )
