--- a/deps/rust/crates/BUILD.cc-1.2.38.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.38.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "js_sys",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,20 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=js-sys",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.78",
+    version = "1.2.38",
     deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.101//:wasm_bindgen",
+        "@crates_vendor__find-msvc-tools-0.1.2//:find_msvc_tools",
+        "@crates_vendor__shlex-1.3.0//:shlex",
     ],
 )
