--- a/deps/rust/crates/BUILD.indexmap-2.11.4.bazel
+++ b/deps/rust/crates/BUILD.indexmap-2.11.4.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "toml_parser",
+    name = "indexmap",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,7 +29,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "alloc",
+        "default",
         "std",
     ],
     crate_root = "src/lib.rs",
@@ -39,13 +39,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=toml_parser",
+        "crate-name=indexmap",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.2",
+    version = "2.11.4",
     deps = [
-        "@crates_vendor__winnow-0.7.13//:winnow",
+        "@crates_vendor__equivalent-1.0.2//:equivalent",
+        "@crates_vendor__hashbrown-0.16.0//:hashbrown",
     ],
 )
