--- a/deps/rust/crates/BUILD.serde_spanned-1.0.2.bazel
+++ b/deps/rust/crates/BUILD.serde_spanned-1.0.2.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "cc",
+    name = "serde_spanned",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,21 +28,25 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "serde",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=cc",
+        "crate-name=serde_spanned",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.37",
+    version = "1.0.2",
     deps = [
-        "@crates_vendor__find-msvc-tools-0.1.1//:find_msvc_tools",
-        "@crates_vendor__shlex-1.3.0//:shlex",
+        "@crates_vendor__serde_core-1.0.225//:serde_core",
     ],
 )
