--- a/deps/rust/crates/BUILD.toml_datetime-0.7.2.bazel
+++ b/deps/rust/crates/BUILD.toml_datetime-0.7.2.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_backend",
+    name = "toml_datetime",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,11 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "serde",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,18 +40,13 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-backend",
+        "crate-name=toml_datetime",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.101",
+    version = "0.7.2",
     deps = [
-        "@crates_vendor__bumpalo-3.19.0//:bumpalo",
-        "@crates_vendor__log-0.4.28//:log",
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-        "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__syn-2.0.106//:syn",
-        "@crates_vendor__wasm-bindgen-shared-0.2.101//:wasm_bindgen_shared",
+        "@crates_vendor__serde_core-1.0.225//:serde_core",
     ],
 )
