--- a/deps/rust/crates/BUILD.toml_parser-1.0.3.bazel
+++ b/deps/rust/crates/BUILD.toml_parser-1.0.3.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "find_msvc_tools",
+    name = "toml_parser",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,17 +28,24 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=find-msvc-tools",
+        "crate-name=toml_parser",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.1",
+    version = "1.0.3",
+    deps = [
+        "@crates_vendor__winnow-0.7.13//:winnow",
+    ],
 )
