--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.103.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.103.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "indexmap",
+rust_proc_macro(
+    name = "wasm_bindgen_macro",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -39,14 +35,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=indexmap",
+        "crate-name=wasm-bindgen-macro",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.11.3",
+    version = "0.2.103",
     deps = [
-        "@crates_vendor__equivalent-1.0.2//:equivalent",
-        "@crates_vendor__hashbrown-0.15.5//:hashbrown",
+        "@crates_vendor__quote-1.0.40//:quote",
+        "@crates_vendor__wasm-bindgen-macro-support-0.2.103//:wasm_bindgen_macro_support",
     ],
 )
