--- a/.bazelrc
+++ b/.bazelrc
@@ -36,14 +36,12 @@ import %workspace%/build/rust_lint.bazelrc
 # Prevents bazel cache invalidation when switching terminals
 build --incompatible_strict_action_env
 
-# Our dependencies (ICU, zlib, etc.) produce a lot of these warnings, so we disable them. Depending
-# on the clang version, zlib either produces warnings for -Wdeprecated-non-prototype or does not
-# have that option, so disable -Wunknown-warning-option there too.
+# Our dependencies (ICU, zlib, etc.) produce a lot of these warnings, so we disable them.
 build --per_file_copt='external@-Wno-error'
 build --per_file_copt='external@-Wno-suggest-override'
 build --per_file_copt='external/v8@-Wno-unused-function'
-build --per_file_copt='external/zlib@-Wno-unknown-warning-option,-Wno-deprecated-non-prototype'
-build --host_per_file_copt='external/zlib@-Wno-unknown-warning-option,-Wnodeprecated-non-prototype'
+build --per_file_copt='external/zlib@-Wno-deprecated-non-prototype'
+build --host_per_file_copt='external/zlib@-Wno-deprecated-non-prototype'
 build --per_file_copt=external/protobuf@-Wno-deprecated-declarations
 build --host_per_file_copt=external/protobuf@-Wno-deprecated-declarations
 
